# Koe

./: .gitignore  BENCHMARK.md  CLAUDE.md  README.ja.md  README.md  ROADMAP.md  bench.py  build.ps1  dictionary.txt.example  interpreter.py  koe.spec  pyproject.toml  requirements.txt  run-admin.bat  run.bat  run.py  selftest.py  setup.ps1  talk.py
.github/workflows/: ci.yml
docs/: DECISIONS.md  VISION.md
koe/: __init__.py  app.py  config.py  context_grabber.py  dictionary.py  engine.py  formatter.py  injector.py  latency.py  paths.py  recorder.py  refiner.py  responder.py  translator.py  tray.py  turntaking.py  voice.py
tests/: test_pure.py  test_talk.py
